# ParaSiF_CHT_Development

./: .gitignore  .gitmodules  README.md  spack.yaml
FEniCSx_OpenFOAM/: Allrun
FEniCSx_OpenFOAM/fluid/0.orig/: T  p
FEniCSx_OpenFOAM/fluid/constant/: g  radiationProperties  thermophysicalProperties
FEniCSx_OpenFOAM/fluid/system/: blockMeshDict  controlDict
FEniCSx_OpenFOAM/solid/: thermalStructure.py
heatSolverFEniCSx_OpenFOAM/caseA/: Allrun
heatSolverFEniCSx_OpenFOAM/caseA/solid/: solver.py
heatSolverFEniCSx_OpenFOAM/caseA/validation/: gnuPlotScript.gp  heatSolverPy-OpenFoamT=70.xy  parameterSetting.py  paraviewStateFile.pvsm
heatSolverFEniCSx_OpenFOAM/caseB/: Allclean  Allrun  pythonHeatData.xy
heatSolverFEniCSx_OpenFOAM/caseB/solid/: solver.py
heatSolverFEniCSx_OpenFOAM/caseB/validation/: gnuPlotScript.gp  heatSolverPy-OpenFoamT=145.83.xy  ofTOPythondata.xy  parameterSetting.py
heatSolverFEniCSx_OpenFOAM/caseC/: Allrun  pythonHeatData.xy
heatSolverFEniCSx_OpenFOAM/caseC/solid/: solver.py
heatSolverFEniCSx_OpenFOAM/caseC/validation/: gnuPlotScript.gp  heatSolverPy-OpenFoamT=145.83.xy  parameterSetting.py
heatSolverPy_OpenFOAM/fluid/system/: fvSolution  plotTemperature
heatSolverPy_OpenFOAM/solid/: solver.py
heatSolverPy_OpenFOAM/validation/: chtMultiRegionFoamData.xy  gnuPlotScript.gp  parameterSetting.py
structure/test/thermoStructure/: Allclean.sh  Allrun.sh  README.md
structure/test/thermoStructure/dummyFluid/: CMakeLists.txt  PUSHER_FETCHER_1.cpp  pusher_fetcher_config.h
validation/: refCaseB.xy
(+6562 files in other folders)
